style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Custom Properties, update these for your own design */

:root {
    --ff-primary: 'Source Sans Pro', sans-serif;
    --ff-secondary: 'Source Code Pro', monospace;

    --fw-reg: 300;
    --fw-bold: 900;

    --clr-light: #fff;
    --clr-dark: #303030;
    --clr-accent: #16e0bd;

    --fs-h1: 3rem;
    --fs-h2: 2.25rem;
    --fs-h3: 1.25rem;
    --fs-body: 1rem;
}

@media (min-width: 800px) {
    :root {
        --fs-h1: 4.5rem;
        --fs-h2: 3.75rem;
        --fs-h3: 1.5rem;
        --fs-body: 1.125rem;
    }
}

/* General styles */


html {
    scroll-behavior: smooth;
}

body {
    background: var(--clr-light);
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    line-height: 1.6;
}

section {
    padding: 5em 2em;
}

img {
    display: block;
    max-width: 100%;
}

strong {
    font-weight: var(--fw-bold)
}

/* Typography */

h1,
h2,
h3 {
    line-height: 1;
    margin: 0;
}

h1 {
    font-size: var(--fs-h1)
}

h2 {
    font-size: var(--fs-h2)
}

h3 {
    font-size: var(--fs-h3)
}

.section-title-intro strong {
    display: block;
}

/* Header */

.header {
    display: flex;
    /* justify-content: space-between; */
    /* align-items: center; */
    padding: 0.9em;
}

.logo {
    padding: 0.2rem;
    max-width: 8.75rem;
}

.nav {
    display: flex;
    justify-content: space-around;
    line-height: 3;
    align-items: center;
    position: fixed;
    background: var(--clr-dark);
    color: var(--clr-light);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 100;

    transform: translateX(100%);
    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
}

.nav-list {
    list-style: none;
    display: flex;
    height: 100%;
    /* flex-direction: column; */
    /* width: max-content; */
    /* justify-content: space-evenly; */
    align-items: center;
    margin: 0;
    padding: 0;
}

.nav__link {
    color: inherit;
    font-weight: var(--fw-bold);
    font-size: var(--fs-h2);
    text-decoration: none;
}

.nav__link:hover {
    color: var(--clr-accent);
}

.nav-toggle {
    padding: .5em;
    background: transparent;
    border: 0;
    cursor: pointer;
    position: absolute;
    right: 2em;
    top: 1em;
    z-index: 1000;
}

.nav-open .nav {
    transform: translateX(0);
}

.nav-open .nav-toggle {
    position: fixed;
}

.nav-open .hamburger {
    transform: rotate(.625turn);
}

.nav-open .hamburger::before {
    transform: rotate(90deg) translateX(-6px);
}

.nav-open .hamburger::after {
    opacity: 0;
}



.hamburger {
    display: block;
    position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
    background: var(--clr-accent);
    width: 2em;
    height: 3px;
    border-radius: 1em;
    transition: transform 250ms ease-in-out;
}


.hamburger::before,
.hamburger::after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
}

.hamburger::before {
    top: 7px;
}

.hamburger::after {
    bottom: 7px;
}

/* intro */

.intro-title {
    text-align: center;
    margin-bottom: .25rem;
    font-weight: var(--fw-reg);
}

.intro-subtitle {
    margin: 0;
    font-size: 24px;
    text-align: center;
}


.intro-subtitle,
.about-subtitle {
    background-color: var(--clr-accent);
    font-family: var(--ff-secondary);
    padding: .25em 1em;
    margin-bottom: 1em;
}

.intro-img {
    max-height: 100%;
    /* height: 313px; */
}

/* introduction  section*/
.intro {
    position: relative;
    padding: 2rem;
}

.intro-img {
    margin-inline: auto;
    width: 80%;
    box-shadow: 0 0.5rem 2.8rem -0.8rem;
}

@media (min-width: 900px) {
    .intro {
        padding: 8rem 0;
        display: grid;
        width: min-content;
        margin: 0 auto;
        grid-column-gap: 1em;
        grid-template-areas:
            "img title"
            "img subtitle";
        grid-template-columns: min-content max-content;
    }
    .intro-title {
        text-align: start;
    }
    .intro-subtitle {
        font-size: 37px;
        text-align: end;
    }

    .intro-img {
        grid-area: img;
        min-width: 250px;
        position: relative;
        z-index: 2;
    }

    /* .intro-title{
        grid-area: title;
    } */
    .intro-subtitle {
        align-self: start;
        grid-column: -1 / 1;
        grid-row: 2;
        position: relative;
        left: -1.5em;
        width: calc(100% + 1.5em);
    }

}

/* hero section */

.hero {
    background-color: var(--clr-dark);
    text-align: center;

    color: #fff;
}

.hero-info p {
    color: #fff;
    opacity: 0.7;
    padding: 0 1em;
}

.hero-btn {
    padding: 0.5rem 1.7rem;
    background-color: var(--clr-accent);
    border: none;
    font-weight: 700;
    margin-top: 2rem;
    cursor: pointer;
    display: inline-block;
    text-transform: uppercase;
    letter-spacing: 2px;
    transition: transform 200ms ease-in-out;
}

.hero-btn:hover {
    transform: scale(1.1);
}

.hero-title {
    color: var(--clr-accent);
    margin-bottom: 2rem;
    position: relative;
}

.hero-title::after {
    content: "";
    display: block;
    width: 3em;
    height: 1px;
    margin: 0.5em auto 1em;
    background-color: var(--clr-light);
    opacity: 0.25;
}

@media (min-width: 800px) {
    .hero {
        background-blend-mode: multiply;
        background-image: url(./images/christopher-gower-m_HRfLhgABo-unsplash.png);
        background-repeat: no-repeat;
        background-size: cover;
    }

    .hero-container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        max-width: 1100px;
        margin: 0 auto;
    }
}

/* About me section */

.about-me {
    display: flex;
    flex-direction: column;
    max-width: 1100px;
    margin: 0 auto;
}

.about-img {
    width: 90%;
    margin-inline: auto;
    box-shadow: 0 0 0.4;
}
.about-title {
    text-align: center;
}

@media (min-width: 800px) {
    .about-me {
        display: grid;
        grid-template-columns: 1fr 200px;
        grid-template-areas: "title img"
            "sub-title img"
            "text img";
        grid-column-gap: 2em;
    }

    .about-title {
        grid-area: title;
    }

    .about-subtitle {
        grid-column: 1 / -1;
        grid-row: 2;
        position: relative;
        left: -1em;
        width: calc(100% + 2em);
        padding-left: 1em;
        padding-right: calc(200px + 4em);
    }

    .about-img {
        grid-area: img;
        position: relative;
        z-index: 2;
    }
}

/* my work */

.my-work {
    padding: 64px 40px;
    background-color: var(--clr-dark);
    color: var(--clr-light);
    text-align: center;
}

.my-work p {
    font-size: 24px;
    color: var(--clr-accent);
    font-weight: var(--fw-bold);
}

.portfolio {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.portfolio-item {
    overflow: hidden;
}

.portfolio-img {
    transition:
        transform 750ms cubic-bezier(.5, 0, .5, 1),
        opacity 250ms linear;
}

.portfolio-img:hover {
    transform: scale(1.2);
    opacity: .5;
    background: var(--clr-accent);
}
@media (min-width: 900px) {
   .my-work{
   padding: 128px 90px;
   }
}

/* footer */

.footer {
    background: rgba(20, 20, 20, 1);
    color: var(--clr-accent);
    text-align: center;
    padding: 2.5em 0;
    font-size: var(--fs-h3);
}

.footer a {
    color: inherit
}

.footer-link {
    text-decoration: none;
    color: var(--clr-accent);
    font-weight: var(--fw-bold);
}

.footer-link:hover {
    text-decoration: underline;
}

.social-list {
    display: flex;
    justify-content: center;
    gap: 1.6rem;
    padding: 0;
    margin: 1em 0;
    list-style: none;
}

.social-item a {
    list-style: none;
}

.footer__link:hover,
.social-list__link:hover {
    opacity: .7;
}

.social-list__link {
    margin: 0 .5em;
}

/* portfolio page */

.portfolio-pages{
    padding: 0 2em 2em;
    max-width: 1000px;
    margin: 0 auto;
}

/* .port-page-img {
    margin-inline: auto;
    width: 600px;
    background-repeat: no-repeat;
    background-size: cover;
} */

.portfolio-text {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
}

